--- a/Rainbow/style.scss
+++ b/Rainbow/style.scss
@@ -9,3 +9,8 @@
 .color-blue { background-color: blue; }
 .color-indigo { background-color: indigo; }
 .color-violet { background-color: violet; }
+
+.c-sharp{
+    color: green
+    //c# is cool
+}
