--- a/Rainbow/style.scss
+++ b/Rainbow/style.scss
@@ -9,3 +9,7 @@
 .color-blue { background-color: blue; }
 .color-indigo { background-color: indigo; }
 .color-violet { background-color: violet; }
+
+.pythonIsCooler {
+    color: grey;
+}
