--- a/Rainbow/style.scss
+++ b/Rainbow/style.scss
@@ -10,6 +10,7 @@
 .color-indigo { background-color: indigo; }
 .color-violet { background-color: violet; }
 
-.pythonIsCooler {
-    color: grey;
+.best-code {
+    //Python
+    color: blue;
 }
